<resources>
    <string name="app_name">CafesYPostres</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="catalog_title">CATALOGO</string>
    <string name="te_text">TE</string>
    <string name="chocolate_text">CHOCOLATE</string>
    <string name="pastel_text">PASTEL</string>
    <string name="galletas_text">GALLETAS</string>
    <string name="view_cart">VER CARRITO</string>
    <string name="cafe_text">CAFE</string>
    <string name="sandwich_text">SANDWICH</string>
    <string name="finalizarPedido_text">FINALIZAR PEDIDO</string>
    <string name="item_Pasteles">Pasteles</string>
    <string name="item_Crepas">Crepas</string>
    <string name="item_Cafe">Cafe</string>
    <string name="item_Galletas">Galletas</string>
    <string name="item_Pan">Pan</string>
    <string name="item_Variado">Variado</string>
    <string name="username_text">Username</string>
    <string name="useremail_text">User email</string>
    <string name="contactanos">Contactanos</string>
    <string name="sobreNosotros">Sobre nosotros</string>
    <string name="compartir">Compartir</string>
    <string name="cerrarSesion">Cerrar sesion</string>
    <string name="continar">Continar</string>
    <string name="usuario">Usuario</string>
    <string name="next">Next</string>
    <string name="confirm_password">Confirm password</string>
    <string name="catalogo">CATALOGO</string>
    <string name="pastel">Pastel</string>
    <string name="yogurt">Yogurt</string>
    <string name="batido">Batido</string>
    <string name="itemrandom">ItemRandom</string>
    <string name="Aumentar">+</string>
    <string name="Disminuir">-</string>
    <string name="Uno">1</string>
    <string name="cantidad">Cantidad</string>
    <string name="aceptar">Aceptar</string>
    <string name="regresar">Regresar</string>
    <string name="precio_final">Precio Final:</string>
    <string name="quantity">Quantity</string>
    <string name="final_price">Final price:</string>
    <string name="back">Back</string>
    <string name="accept">Accept</string>
    <string name="buy_now">Buy now</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="place_order">Place order</string>
    <string name="add_more_products">Add more products</string>
    <string name="x">X</string>
    <string name="producto">Producto</string>
    <string name="cantidad_1">Cantidad: 1</string>
    <string name="precio_50_00">Precio: $50.00</string>
    <string name="my_orders">My orders</string>
    <string name="mis_pedidos">Mis pedidos</string>
    <string name="no_order">No. Order</string>
    <string name="price">Price</string>
    <string name="details">Details</string>
    <string name="product">Product</string>
</resources>
