<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp">



    <TextView
        android:id="@+id/itemProductItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:layout_marginStart="40dp"
        android:text="@string/product"
        android:textColor="@color/black"
        android:textSize="22sp" />


    <TextView
        android:id="@+id/itemQuantityItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:text="@string/quantity"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/itemkPriceItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:text="@string/price"
        android:textColor="@color/black"
        android:textSize="22sp" />
</LinearLayout>
