<?xml version="1.0" encoding="utf-8"?>



<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".Activities.MenuActivity">







    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@color/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <!-- Botón en la izquierda -->
        <ImageButton
            android:id="@+id/buttonDrawerToggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_menu_24"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:layout_gravity="start"

            />

        <!-- Texto centrado -->
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/catalogo"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center" />

    </androidx.appcompat.widget.Toolbar>



    <Button
        android:id="@+id/button5"
        android:layout_width="179dp"
        android:layout_height="56dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/button_background"
        android:text="@string/view_cart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/button3"
        android:layout_width="179dp"
        android:layout_height="56dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/button_background"
        android:text="@string/finalizarPedido_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />


    <FrameLayout
        android:layout_width="205dp"
        android:layout_height="205dp"
        android:layout_marginTop="55dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageViewCafe"
            android:layout_width="210dp"
            android:layout_height="210dp"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/cafefinal" />

        <TextView
            android:id="@+id/textViewCafe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cafe_text"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold" />


    </FrameLayout>





    <FrameLayout
        android:layout_width="206dp"
        android:layout_height="206dp"
        android:layout_marginStart="205dp"
        android:layout_marginTop="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageViewPastel"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/pastelfinal" />

        <TextView
            android:id="@+id/textViewPastel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/pastel"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="263dp"
            tools:layout_editor_absoluteY="138dp" />

    </FrameLayout>


    <FrameLayout
        android:layout_width="206dp"
        android:layout_height="206dp"
        android:layout_marginTop="260dp"
        android:layout_marginEnd="208dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewChocolate"
            android:layout_width="205dp"
            android:layout_height="205dp"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/chocholatefinal" />

        <TextView
            android:id="@+id/textViewChocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/chocolate_text"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="-25dp"
            tools:layout_editor_absoluteY="324dp" />



    </FrameLayout>

    <FrameLayout
        android:layout_width="210dp"
        android:layout_height="210dp"
        android:layout_marginStart="208dp"
        android:layout_marginTop="260dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageViewPan"
            android:layout_width="205dp"
            android:layout_height="205dp"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/panfinal" />

        <TextView
            android:id="@+id/textViewPan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/item_Pan"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="-25dp"
            tools:layout_editor_absoluteY="324dp" />


    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="208dp"
        android:layout_height="206dp"
        android:layout_marginTop="464dp"
        android:layout_marginEnd="205dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageViewYogurtConFrutas"
            android:layout_width="205dp"
            android:layout_height="205dp"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/yogurtconfrutas" />

        <TextView
            android:id="@+id/textViewYogurt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/yogurt"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="-25dp"
            tools:layout_editor_absoluteY="324dp" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayoutBatidos"
        android:layout_width="208dp"
        android:layout_height="206dp"
        android:layout_marginStart="208dp"
        android:layout_marginTop="464dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewBatido"
            android:layout_width="205dp"
            android:layout_height="205dp"
            android:clickable="true"
            android:focusable="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/batidos" />

        <TextView
            android:id="@+id/textViewBatido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:text="@string/batido"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="-25dp"
            tools:layout_editor_absoluteY="324dp" />

    </FrameLayout>




</androidx.constraintlayout.widget.ConstraintLayout>